--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,117 @@
-<div class="home">
-  <img
-    class="home__logo"
-    src="../assets/logo_screenlovers-full.png"
-    alt="screenlovers full logo"
-  />
+<header>
+  <div class="logo">
+    <div class="logo__leftpick"></div>
+    <img
+      class="logo__image"
+      src="../assets/clapperboard-solid.svg"
+      alt="clapperboard logo"
+    />
+    <div class="logo__separate"></div>
+    <div class="logo__title">
+      <h1>SCREENLOVERS</h1>
+      <h2>(Re)découvrez le cinéma</h2>
+    </div>
+  </div>
+  <nav class="navmenu">
+    <ul class="navmenu__list">
+      <li class="navmenu__list__unique">ACCUEIL</li>
+      <li class="navmenu__list__unique">FILMS</li>
+      <li class="navmenu__list__unique">CONTACT</li>
+    </ul>
+  </nav>
+</header>
+
+<div>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
+  <p>aaa</p>
 </div>
