--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,88 @@
-.home {
+@import "../variables";
+
+header {
   width: 100%;
+  height: 10%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  position: fixed;
+  top: 0;
+}
+.logo {
+  user-select: none;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  &__logo {
-    width: 33%;
+  width: 33%;
+  background-color: $primaryColor;
+  position: relative;
+  box-shadow: 0px 0px 75px 10px rgba(255, 211, 53, 1);
+  &__leftpick {
+    position: absolute;
+    left: -3%;
+    height: 45%;
+    width: 6%;
+    border-radius: 50%;
+    background-color: $backgroundColor;
   }
+  &__image {
+    width: 12%;
+    transform: rotate(-15deg);
+    position: absolute;
+    left: 5%;
+  }
+  &__separate {
+    width: 2%;
+    height: 95%;
+    background-color: $backgroundColor;
+    position: absolute;
+    left: 20%;
+  }
+  &__title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    color: $backgroundColor;
+    height: 100%;
+    h1 {
+      font-family: "Bungee", cursive;
+      font-size: 42px;
+      height: 50%;
+    }
+    h2 {
+      font-family: "Sono", sans-serif;
+      font-size: 20px;
+    }
+    position: absolute;
+    left: 23%;
+    top: -10px;
+    margin-right: 5px;
+  }
+}
+
+.navmenu {
+  width: 100%;
+  height: 100%;
+  color: white;
+  backdrop-filter: blur(10px);
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  &__list {
+    color: $primaryColor;
+    font-family: "Sono", monospace;
+    font-size: 22px;
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    // list-style-image: url(../favicon.ico);
+  }
+}
+
+p {
+  color: white;
+  text-align: center;
 }
