--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,5 +7,5 @@
 }
 body {
   width: 100%;
-  background-color: rgb(20, 20, 20);
+  background-color: $backgroundColor;
 }
