--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,33 @@
-<p>header works!</p>
+<header>
+  <div class="logo">
+    <img
+      class="logo__image"
+      src="../../assets/logo_screenlovers.png"
+      alt="clapperboard logo"
+    />
+  </div>
+  <nav class="navmenu">
+    <ul class="navmenu__list">
+      <li class="navmenu__list__unique">
+        <i class="fa-solid fa-ticket"></i>ACCUEIL
+      </li>
+      <li class="navmenu__list__unique">
+        <i class="fa-solid fa-ticket"></i>FILMS
+      </li>
+      <li class="navmenu__list__unique">
+        <i class="fa-solid fa-ticket"></i>CONTACT
+      </li>
+    </ul>
+    <div class="navmenu__searchbar">
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <textarea
+        class="navmenu__searchbar__text"
+        id="searchbar"
+        name="searchbar"
+        placeholder="Rechercher un film"
+        cols="30"
+        rows="1"
+      ></textarea>
+    </div>
+  </nav>
+</header>
