tests for http requests.

--- a/src/_keyframes.scss
+++ b/src/_keyframes.scss
@@ -6,3 +6,18 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes fadeLoader {
+  from {
+    opacity: 1;
+    transform: scale(1) translateX(0);
+  }
+  99% {
+    opacity: 0.01;
+    transform: scale(1) translateX(0);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0) translateX(200vw);
+  }
+}
