--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div class="loading">
+<div class="loading" #loading>
   <div class="loader">
     <div class="loader__holes"></div>
     <div class="loader__holes"></div>
