--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-loader></app-loader>
+<!-- <app-loader></app-loader> -->
 <app-header></app-header>
-<router-outlet></router-outlet>
+<app-single-movie></app-single-movie>
+<!-- <router-outlet></router-outlet> -->
