--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,31 +2,32 @@
 
 header {
   width: 100%;
-  height: 10%;
+  height: 18%;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 0;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(7px);
+  background-color: $backgroundColorA;
 }
 .logo {
   width: 15%;
-  position: relative;
+
   &__image {
-    width: 85%;
+    width: 75%;
     transform: rotate(-15deg);
-    position: absolute;
+
     background-color: transparent;
-    left: 5%;
-    top: 30%;
+
     box-shadow: 0px 30px 45px -40px rgba(255, 211, 53, 1),
       0px -30px 45px -40px rgba(255, 211, 53, 1);
   }
 }
 
 .navmenu {
-  width: 100%;
-  height: 100%;
+  width: 85%;
   color: white;
   display: flex;
   flex-direction: row;
@@ -34,7 +35,7 @@ header {
   align-items: center;
   &__list {
     color: $primaryColor;
-    font-size: 22px;
+    font-size: 24px;
     width: 60%;
     display: flex;
     flex-direction: row;
@@ -46,14 +47,21 @@ header {
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      width: 30%;
       transition: all 150ms ease-out;
       & i {
         font-size: 20px;
         margin-right: 10px;
+        transform-origin: right;
+        transition: all 200ms ease-out;
       }
       &:hover {
         cursor: pointer;
         text-shadow: $primaryColor 0 0 15px;
+        font-size: 28px;
+        & i {
+          font-size: 26px;
+        }
       }
     }
   }
@@ -95,10 +103,4 @@ header {
       }
     }
   }
-}
-
-p {
-  color: white;
-  font-size: 30px;
-  margin: 300px;
 }
