--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,12 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: "Sono", monospace;
+  margin: 0;
 }
 body {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: $backgroundColor;
+  margin: 0;
 }
