Landing page 99%.Routing to singlemovie OK.

--- a/src/_keyframes.scss
+++ b/src/_keyframes.scss
@@ -8,7 +8,7 @@
 }
 
 @keyframes fadeLoader {
-  from {
+  0% {
     opacity: 1;
     transform: scale(1) translateX(0);
   }
@@ -16,8 +16,20 @@
     opacity: 0.01;
     transform: scale(1) translateX(0);
   }
-  to {
+  100% {
     opacity: 0;
     transform: scale(0) translateX(200vw);
+  }
+}
+
+@keyframes fingerDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
