--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <!-- <app-loader></app-loader> -->
 <app-header></app-header>
-<app-single-movie></app-single-movie>
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
