--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,6 +10,7 @@ header {
   background-color: $backgroundColorA;
   box-shadow: 0px 3px 15px 2px $primaryColor;
   overflow: hidden;
+  z-index: 10;
 
   .logo {
     width: 33%;
