--- a/src/app/single-movie/single-movie.component.scss
+++ b/src/app/single-movie/single-movie.component.scss
@@ -142,23 +142,32 @@
       justify-content: center;
       flex-wrap: wrap;
       margin-bottom: 25px;
-      &__memberCard {
-        width: 150px;
-        height: 300px;
-        display: flex;
-        flex-direction: column;
-        border: solid 2px $primaryColor;
-        background-color: $primaryColor;
-        margin: 0 25px 25px 0;
-        &__profile {
-          width: 100%;
+      &__member {
+        &__card {
+          width: 150px;
+          height: 300px;
+          display: flex;
+          flex-direction: column;
+          border: solid 2px $primaryColor;
+          background-color: $primaryColor;
+          margin: 0 25px 25px 0;
+          transition: all 200ms ease-in;
+          &__profile {
+            width: 100%;
+            transition: all 200ms ease-in;
+          }
+          &__name {
+            margin: 5px 5px 0 5px;
+            color: $backgroundColor;
+            height: 4em;
+            font-size: 18px;
+            text-align: center;
+            transition: all 200ms ease-in;
+          }
         }
-        &__name {
-          margin: 5px 5px 0 5px;
-          color: $backgroundColor;
-          height: 4em;
-          font-size: 18px;
-          text-align: center;
+        :hover {
+          box-shadow: 0 0 5px 5px $primaryColor;
+          cursor: pointer;
         }
       }
     }
@@ -167,6 +176,7 @@
       font-size: 26px;
       font-weight: 800;
       text-align: center;
+      margin-bottom: 10px;
     }
   }
 }
