--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,13 @@
   box-sizing: border-box;
   font-family: "Sono", monospace;
   margin: 0;
+  line-height: 1.25em;
 }
 body {
   background-color: $backgroundColor;
   margin: 0;
+}
+
+strong {
+  color: $primaryColor;
 }
