--- a/src/app/single-movie/single-movie.component.scss
+++ b/src/app/single-movie/single-movie.component.scss
@@ -39,7 +39,6 @@
     padding: 0 75px;
     position: relative;
     overflow: hidden;
-    z-index: -2;
     &__leftPick {
       position: absolute;
       top: 25%;
@@ -61,10 +60,29 @@
     &__poster {
       width: 25%;
       border-right: dashed 8px $backgroundColor;
-      padding-right: 20px;
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       &__image {
         width: 100%;
-        padding: 15px 15px 15px 0;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+      &__rating {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 10px;
+        i {
+          background-color: $backgroundColor;
+          font-size: 24px;
+          color: $primaryColor;
+          margin: 0 10px;
+          padding: 5px;
+        }
       }
     }
     &__description {
@@ -87,29 +105,23 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        h5 {
-          font-size: 26px;
-          text-align: center;
-          font-weight: 800;
-          margin: 15px 0;
-        }
         &__producers {
           width: 100%;
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
           align-items: center;
-          justify-content: center;
+          justify-content: space-around;
           &__list {
-            width: 20%;
+            width: 10%;
             display: flex;
             flex-direction: row;
-            justify-content: space-around;
+            justify-content: center;
             img {
-              width: 66%;
+              width: 100%;
             }
             p {
-              font-size: 24px;
+              font-size: 20px;
               font-weight: 500;
               text-align: center;
             }
@@ -120,7 +132,7 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: left;
         &__list {
           display: flex;
           justify-content: center;
@@ -139,7 +151,7 @@
       width: 100%;
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: left;
       flex-wrap: wrap;
       margin-bottom: 25px;
       &__member {
@@ -151,22 +163,32 @@
           border: solid 2px $primaryColor;
           background-color: $primaryColor;
           margin: 0 25px 25px 0;
-          transition: all 200ms ease-in;
+          transition: all 100ms ease-in-out;
+          overflow: hidden;
           &__profile {
             width: 100%;
-            transition: all 200ms ease-in;
+            height: 220px;
+            overflow: hidden;
+            &__image {
+              width: 100%;
+              transform: scale(1);
+              transform-origin: top;
+              transition: all 400ms ease-in-out;
+            }
           }
           &__name {
             margin: 5px 5px 0 5px;
             color: $backgroundColor;
-            height: 4em;
             font-size: 18px;
             text-align: center;
-            transition: all 200ms ease-in;
+            transition: all 100ms ease-in-out;
           }
         }
         :hover {
           box-shadow: 0 0 5px 5px $primaryColor;
+          img {
+            transform: scale(1.2);
+          }
           cursor: pointer;
         }
       }
@@ -175,7 +197,7 @@
       color: $primaryColor;
       font-size: 26px;
       font-weight: 800;
-      text-align: center;
+      text-align: left;
       margin-bottom: 10px;
     }
   }
