--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -2,7 +2,7 @@
 
 .home {
   width: 100%;
-  margin-top: 150px;
+  padding: 150px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
