--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
       <li class="navmenu__list__unique">12 - 2022</li>
       <li class="navmenu__list__unique">
         Powered by:&nbsp;
-        <a href="https://themoviedb.org"
+        <a href="https://themoviedb.org" target="_blank"
           ><img src="../../assets/logo_tmdb.svg" alt="logo tmdb"
         /></a>
       </li>
