Added comments to all html and ts files.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
+  <!-- Main logo -->
   <div class="logo">
     <img
       class="logo__image"
@@ -7,7 +8,9 @@
     />
     <h2>(Re)découvrez le cinéma</h2>
   </div>
+
   <nav class="navmenu">
+    <!-- Navigation links -->
     <ul class="navmenu__list">
       <li class="navmenu__list__unique" (click)="onHomePage()">
         <i class="fa-solid fa-ticket"></i>ACCUEIL
@@ -22,6 +25,7 @@
         <i class="fa-solid fa-circle-question"></i>
       </li>
     </ul>
+    <!-- Search module -->
     <div class="navmenu__searchbar">
       <i class="fa-solid fa-magnifying-glass"></i>
       <textarea
