--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,9 +1,11 @@
 <div class="home">
+  <!-- Main logo on home -->
   <div class="home__logo">
     <img src="../../assets/logo_screenlovers.png" />
     <h1>(Re)découvrez le cinéma</h1>
   </div>
 
+  <!-- Welcome message explaining the main functions of the site -->
   <div class="home__welcomeMessage">
     <p>
       Bienvenue sur <strong>SCREENLOVERS</strong>, où néohpytes comme passionnés
@@ -21,6 +23,7 @@
     </p>
   </div>
 
+  <!-- Featuring trending movies -->
   <div class="home__trending">
     <h3>TRENDING</h3>
   </div>
