--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,17 @@ body {
   position: relative;
   min-height: 100vh;
   box-shadow: 0px -100px 25px -60px $primaryColor inset;
+  &::-webkit-scrollbar {
+    width: 15px;
+  }
+  &::-webkit-scrollbar-track {
+    background: $backgroundColor;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $backgroundColor;
+    border: 3px solid $primaryColor;
+    box-shadow: inset 0 0 5px $primaryColor;
+  }
 }
 
 strong {
