--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -3,15 +3,33 @@
 .home {
   width: 100%;
   padding: 150px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   &__logo {
     width: 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 25px;
     img {
@@ -35,18 +53,32 @@
     i {
       color: $primaryColor;
       font-size: 26px;
+      -webkit-transform: translateY(10px);
+      -ms-transform: translateY(10px);
       transform: translateY(10px);
     }
   }
   &__trending {
     width: 95%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     h3 {
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
       width: fit-content;
       color: $primaryColor;
+      -ms-flex-item-align: start;
       align-self: flex-start;
       font-size: 40px;
       font-family: "Bungee", cursive;
