--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -3,13 +3,27 @@
 .landing-page {
   width: 100%;
   padding-top: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   &__randomMovie {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
     background-color: $primaryColor;
     padding: 0 75px;
@@ -37,9 +51,18 @@
       width: 25%;
       border-right: dashed 8px $backgroundColor;
       padding: 15px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       &__image {
         width: 100%;
@@ -47,9 +70,18 @@
     }
     &__description {
       width: 75%;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       &__title {
         width: 100%;
@@ -65,9 +97,17 @@
       }
       &__buttons {
         width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
         flex-direction: row;
+        -ms-flex-pack: distribute;
         justify-content: space-around;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         margin-bottom: 10%;
         &__unique {
@@ -75,17 +115,32 @@
           height: 150px;
           border: 5px solid $backgroundColor;
           border-radius: 20px;
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: column;
           flex-direction: column;
+          -ms-flex-pack: distribute;
           justify-content: space-around;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
           align-items: center;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
           user-select: none;
+          -webkit-transition: all 100ms linear;
+          -o-transition: all 100ms linear;
           transition: all 100ms linear;
           &:hover {
             cursor: pointer;
             background-color: $backgroundColor;
             i {
               color: $primaryColor;
+              -webkit-transform: translateY(5px) scale(1.1);
+              -ms-transform: translateY(5px) scale(1.1);
               transform: translateY(5px) scale(1.1);
               text-shadow: 0 0 10px $primaryColor;
             }
@@ -97,7 +152,11 @@
           i {
             font-size: 50px;
             color: $backgroundColor;
+            -webkit-transform: translateY(0) scale(1);
+            -ms-transform: translateY(0) scale(1);
             transform: translateY(0) scale(1);
+            -webkit-transition: all 150ms linear;
+            -o-transition: all 150ms linear;
             transition: all 150ms linear;
           }
           p {
@@ -106,6 +165,8 @@
             font-weight: 600;
             color: $primaryColor;
             opacity: 0;
+            -webkit-transition: all 200ms 150ms linear;
+            -o-transition: all 200ms 150ms linear;
             transition: all 200ms 150ms linear;
           }
         }
