--- a/src/app/loader/loader.component.scss
+++ b/src/app/loader/loader.component.scss
@@ -7,13 +7,23 @@
   position: fixed;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   z-index: 50;
   background-color: $backgroundColor;
   opacity: 1;
+  -webkit-animation: fadeLoader 2000ms 3000ms 1 linear both;
   animation: fadeLoader 2000ms 3000ms 1 linear both;
 }
 
@@ -33,8 +43,13 @@
   background-color: $primaryColor;
   border-radius: 50%;
   position: relative;
+  -webkit-transform: rotate(0);
+  -ms-transform: rotate(0);
   transform: rotate(0);
+  -webkit-transition: all 3000ms ease-in;
+  -o-transition: all 3000ms ease-in;
   transition: all 3000ms ease-in;
+  -webkit-animation: loader 1500ms linear infinite both;
   animation: loader 1500ms linear infinite both;
   &::before {
     width: 380px;
