--- a/src/app/single-movie/single-movie.component.html
+++ b/src/app/single-movie/single-movie.component.html
@@ -95,76 +95,135 @@
     </div>
   </div>
 
-  <!-- Displays directors and actors -->
-  <div
-    class="singleMovie__crew"
-    *ngIf="uniqueMovieCredits$ | async as movieCredits"
-  >
-    <h5>Réalisation:</h5>
+  <!-- Displays directors and writers -->
+  <div class="singleMovie__crew">
     <div
       class="singleMovie__crew__list"
       *ngIf="uniqueMovieCrew$ | async as movieCrew"
     >
-      <div
-        class="singleMovie__crew__list__member"
-        *ngFor="let movieCrewMember of movieCrew; let i = index"
-      >
-        <!-- Limiting display to 5 members, modified by clicking the crew toggle link -->
+      <h5>Réalisation:</h5>
+      <div class="singleMovie__crew__list__members">
         <div
-          class="singleMovie__crew__list__member__card"
-          *ngIf="crewToggle ? i < 100 : i < 5"
+          class="singleMovie__crew__list__members__unique"
+          *ngFor="let movieCrewMember of movieCrew; let i = index"
         >
-          <div class="singleMovie__crew__list__member__card__profile">
-            <img
-              class="singleMovie__crew__list__member__card__profile__image"
-              [src]="
-                movieCrewMember.profile_path
-                  ? posterUrl + movieCrewMember.profile_path
-                  : '../../assets/default_profile.png'
-              "
-            />
-          </div>
+          <!-- Limiting display to 3 members, modified by clicking the crew toggle link -->
+          <div
+            class="singleMovie__crew__list__members__unique__card"
+            *ngIf="crewToggle ? i < 100 : i < 3"
+          >
+            <div
+              class="singleMovie__crew__list__members__unique__card__profile"
+            >
+              <img
+                class="singleMovie__crew__list__members__unique__card__profile__image"
+                [src]="
+                  movieCrewMember.profile_path
+                    ? posterUrl + movieCrewMember.profile_path
+                    : '../../assets/default_profile.png'
+                "
+              />
+            </div>
 
-          <p class="singleMovie__crew__list__member__card__name">
-            {{ movieCrewMember.name }}
-          </p>
+            <p class="singleMovie__crew__list__members__unique__card__name">
+              {{ movieCrewMember.name }}
+            </p>
+          </div>
         </div>
       </div>
-      <!-- Crew toggle link, displayed only if there's more than 5 directors -->
-      <p class="seeMore" (click)="seeMoreCrew()" *ngIf="movieCrew.length > 5">
+      <!-- Crew toggle link, displayed only if there's more than 3 directors -->
+      <p class="seeMore" (click)="seeMoreCrew()" *ngIf="movieCrew.length > 3">
         {{ crewToggle ? "Voir moins..." : "Voir plus..." }}
       </p>
     </div>
 
-    <h5>Acteurs:</h5>
-    <div class="singleMovie__crew__list">
-      <div
-        class="singleMovie__crew__list__member"
-        *ngFor="let movieCast of movieCredits.cast; let i = index"
-      >
-        <!-- Same as directors, displaying only 5 members (toggled by castToggle) -->
+    <div
+      class="singleMovie__crew__list"
+      *ngIf="uniqueMovieWriters$ | async as movieWriters"
+    >
+      <h5>Ecriture:</h5>
+      <div class="singleMovie__crew__list__members">
         <div
-          class="singleMovie__crew__list__member__card"
-          *ngIf="castToggle ? i < 100 : i < 5"
+          class="singleMovie__crew__list__members__unique"
+          *ngFor="let movieWriter of movieWriters; let i = index"
         >
-          <div class="singleMovie__crew__list__member__card__profile">
-            <img
-              class="singleMovie__crew__list__member__card__profile__image"
-              [src]="
-                movieCast.profile_path
-                  ? posterUrl + movieCast.profile_path
-                  : '../../assets/default_profile.png'
-              "
-            />
-          </div>
+          <!-- Limiting display to 3 members, modified by clicking the crew toggle link -->
+          <div
+            class="singleMovie__crew__list__members__unique__card"
+            *ngIf="writersToggle ? i < 100 : i < 3"
+          >
+            <div
+              class="singleMovie__crew__list__members__unique__card__profile"
+            >
+              <img
+                class="singleMovie__crew__list__members__unique__card__profile__image"
+                [src]="
+                  movieWriter.profile_path
+                    ? posterUrl + movieWriter.profile_path
+                    : '../../assets/default_profile.png'
+                "
+              />
+            </div>
 
-          <p class="singleMovie__crew__list__member__card__name">
-            {{ movieCast.name }}
-          </p>
+            <p class="singleMovie__crew__list__members__unique__card__name">
+              {{ movieWriter.name }}
+            </p>
+          </div>
         </div>
       </div>
-      <!-- Link to toggle actors display (from 5 to all) -->
-      <p class="seeMore" (click)="seeMoreCast()">
+      <!-- Crew toggle link, displayed only if there's more than 3 writers -->
+      <p
+        class="seeMore"
+        (click)="seeMoreWriters()"
+        *ngIf="movieWriters.length > 3"
+      >
+        {{ writersToggle ? "Voir moins..." : "Voir plus..." }}
+      </p>
+    </div>
+  </div>
+
+  <!--  Displays actors -->
+  <div class="singleMovie__crew">
+    <div
+      class="singleMovie__crew__list"
+      *ngIf="uniqueMovieCredits$ | async as movieCredits"
+    >
+      <h5>Acteurs:</h5>
+      <div class="singleMovie__crew__list__members">
+        <div
+          class="singleMovie__crew__list__members__unique"
+          *ngFor="let movieCast of movieCredits.cast; let i = index"
+        >
+          <!-- Same as directors, displaying only 8 members (toggled by castToggle) -->
+          <div
+            class="singleMovie__crew__list__members__unique__card"
+            *ngIf="castToggle ? i < 100 : i < 8"
+          >
+            <div
+              class="singleMovie__crew__list__members__unique__card__profile"
+            >
+              <img
+                class="singleMovie__crew__list__members__unique__card__profile__image"
+                [src]="
+                  movieCast.profile_path
+                    ? posterUrl + movieCast.profile_path
+                    : '../../assets/default_profile.png'
+                "
+              />
+            </div>
+
+            <p class="singleMovie__crew__list__members__unique__card__name">
+              {{ movieCast.name }}
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Link to toggle actors display (from 8 to all) -->
+      <p
+        class="seeMore"
+        (click)="seeMoreCast()"
+        *ngIf="movieCredits.cast.length > 8"
+      >
         {{ castToggle ? "Voir moins..." : "Voir plus..." }}
       </p>
     </div>
