--- a/src/app/single-movie/single-movie.component.scss
+++ b/src/app/single-movie/single-movie.component.scss
@@ -11,9 +11,18 @@
     text-align: center;
   }
   &__subTitle {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     &__text {
       text-indent: 0.5em;
@@ -35,7 +44,12 @@
 
   &__block {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
     background-color: $primaryColor;
     padding: 0 75px;
@@ -65,16 +79,32 @@
       width: 25%;
       border-right: dashed 8px $backgroundColor;
       padding: 15px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       &__image {
         width: 100%;
       }
       &__rating {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
         flex-direction: row;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
         margin-top: 10px;
         i {
@@ -99,26 +129,58 @@
       }
       width: 75%;
       padding: 15px 0 0 25px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between;
       &__production {
         width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         &__producers {
           width: 100%;
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: row;
           flex-direction: row;
+          -ms-flex-wrap: wrap;
           flex-wrap: wrap;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
           align-items: center;
+          -ms-flex-pack: distribute;
           justify-content: space-around;
           &__list {
             width: 15%;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
+            -webkit-box-orient: horizontal;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: row;
             flex-direction: row;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
             justify-content: center;
             img {
               width: 100%;
@@ -133,11 +195,22 @@
       }
       &__countries {
         width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
         flex-direction: row;
+        -webkit-box-pack: left;
+        -ms-flex-pack: left;
         justify-content: left;
         &__list {
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
           justify-content: center;
           img {
             width: 35%;
@@ -145,9 +218,17 @@
         }
         &__genres {
           width: 100%;
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: row;
           flex-direction: row;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
           align-items: center;
+          -ms-flex-pack: distribute;
           justify-content: space-around;
           h6 {
             font-size: 26px;
@@ -163,60 +244,91 @@
     width: 100%;
     padding: 0 15px;
     margin: 25px 0;
+    display: flex;
+    flex-direction: row;
     &__list {
       width: 100%;
       display: flex;
-      flex-direction: row;
-      justify-content: left;
-      align-items: center;
-      flex-wrap: wrap;
+      flex-direction: column;
       margin-bottom: 25px;
       .seeMore {
         color: $primaryColor;
+        width: fit-content;
+        height: fit-content;
+        transform-origin: left;
+        -webkit-transform: scale(1);
+        -ms-transform: scale(1);
         transform: scale(1);
+        -webkit-transition: all 100ms ease-in-out;
+        -o-transition: all 100ms ease-in-out;
         transition: all 100ms ease-in-out;
         &:hover {
           cursor: pointer;
           text-shadow: $primaryColor 0 0 15px;
+          -webkit-transform: scale(1.1);
+          -ms-transform: scale(1.1);
           transform: scale(1.1);
         }
       }
-      &__member {
-        &__card {
-          width: 150px;
-          height: 300px;
-          display: flex;
-          flex-direction: column;
-          border: solid 2px $primaryColor;
-          background-color: $primaryColor;
-          margin: 0 25px 25px 0;
-          transition: all 100ms ease-in-out;
-          overflow: hidden;
-          &__profile {
-            width: 100%;
-            height: 220px;
+      &__members {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        &__unique {
+          &__card {
+            width: 150px;
+            height: 300px;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            border: solid 2px $primaryColor;
+            background-color: $primaryColor;
+            margin: 0 25px 25px 0;
+            -webkit-transition: all 100ms ease-in-out;
+            -o-transition: all 100ms ease-in-out;
+            transition: all 100ms ease-in-out;
             overflow: hidden;
-            &__image {
+            &__profile {
               width: 100%;
-              transform: scale(1);
-              transform-origin: top;
-              transition: all 400ms ease-in-out;
+              height: 220px;
+              overflow: hidden;
+              &__image {
+                width: 100%;
+                -webkit-transform: scale(1);
+                -ms-transform: scale(1);
+                transform: scale(1);
+                -webkit-transform-origin: top;
+                -ms-transform-origin: top;
+                transform-origin: top;
+                -webkit-transition: all 400ms ease-in-out;
+                -o-transition: all 400ms ease-in-out;
+                transition: all 400ms ease-in-out;
+              }
+            }
+            &__name {
+              margin: 5px 5px 0 5px;
+              color: $backgroundColor;
+              font-size: 18px;
+              text-align: center;
+              -webkit-transition: all 100ms ease-in-out;
+              -o-transition: all 100ms ease-in-out;
+              transition: all 100ms ease-in-out;
             }
           }
-          &__name {
-            margin: 5px 5px 0 5px;
-            color: $backgroundColor;
-            font-size: 18px;
-            text-align: center;
-            transition: all 100ms ease-in-out;
+          :hover {
+            -webkit-box-shadow: 0 0 5px 5px $primaryColor;
+            box-shadow: 0 0 5px 5px $primaryColor;
+            img {
+              -webkit-transform: scale(1.2);
+              -ms-transform: scale(1.2);
+              transform: scale(1.2);
+            }
+            cursor: pointer;
           }
-        }
-        :hover {
-          box-shadow: 0 0 5px 5px $primaryColor;
-          img {
-            transform: scale(1.2);
-          }
-          cursor: pointer;
         }
       }
     }
